--- a/carbon-market/styles/style.css
+++ b/carbon-market/styles/style.css
@@ -94,6 +94,7 @@ body{
        margin-bottom: 1%;
        font-weight: 600;
        text-align: left;
+       /*float: left;*/
     }
      
     h3 {
@@ -249,7 +250,7 @@ body{
     display: inline-block;
     position: relative;
     width: 100%;
-    padding-bottom: 100%; /* aspect ratio */
+    /*padding-bottom: 100%;*/
     vertical-align: top;
     overflow: hidden;
 }
@@ -275,3 +276,169 @@ body{
     top: 10px;
     left: 0;
 }
+
+/*Nav*/
+/* Style the navbar */
+#navbar {
+  overflow: hidden;
+  background-color: #0d0d0d;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  
+  /*opacity: 0.5;*/
+}
+
+/* Navbar links */
+#navbar a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+/* Page content */
+.content {
+  padding: 16px;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
+}
+
+
+
+
+
+
+/*Dropdown*/
+
+   .dropdown {
+      position: relative;
+      display: inline-block;
+      font-size: 1em;
+      border-bottom: 1% solid #DDD; 
+      width:90%;
+    }
+    
+    /*Size of the display box*/
+    .dropdown > a, .dropdown > span {
+      font-size: 1em;
+      padding: 0.8%;
+      display: inline-block;
+      color: #D93644; 
+      /*color:  #353730;*/
+      /*background-color: #D93644; */
+      text-decoration: none;
+      cursor:pointer;
+    }
+    
+    /*Arrow Button*/
+    .dropdown > a:before, .dropdown > span:before {
+      position: absolute;
+      right: 4%;
+      top: 40%;
+      content: ' ';
+      border-left: 0.25em solid transparent;
+      border-right: 0.25em solid transparent;
+      border-top: 0.25em solid #D93644;
+    }
+    
+    /*Arrow button function*/
+    .dropdown input[type=checkbox] {
+      position: absolute;
+      display: block;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      margin: 0%;
+      opacity: 0;
+    }
+    
+    /*.dropdown input[type=checkbox]:checked {*/
+    /*  position: fixed;*/
+    /*  z-index:+0;*/
+    /*  top: 0px; left: 0px; */
+    /*  right: 0px; bottom: 0px;*/
+    /*}*/
+    /*.dropdown label{*/
+    /*  color:#D93644;*/
+    /*}*/
+    
+    /* Drop down box*/
+    .dropdown ul {
+      position: absolute;
+      top: 70%;
+      border: 1% solid #ccc;
+      border-radius: 3%;
+      left: 0%;
+      list-style: none;
+      width: 96%;
+      padding: 2% 2%;
+      display: none;
+      background-color: rgba(255, 255, 255, 0.6);
+      /*box-shadow: 0 3px 6px rgba(0,0,0,.175);*/
+    }
+
+    /* To select an option in drop down menu*/
+    .dropdown input[type=checkbox]:checked + ul {
+      display: block;
+    }
+    
+    /* Text styling in drop down menu*/
+    .dropdown ul li {
+      display: block;
+      padding: 2% 2%;
+      white-space: nowrap;
+      min-width: 1%;
+      color: #75756E;
+    }
+    
+    /* Hover over function */
+    .dropdown ul li:hover {
+      background-color: rgba(0, 0, 0, 0.2);
+      cursor: pointer;
+      
+    }
+    
+    /*.dropdown ul li a {*/
+    /*  text-decoration: none;*/
+    /*  display: block;*/
+    /*  color: black*/
+    /*}*/
+    
+    /*.dropdown .divider {*/
+    /*  height: 1px;*/
+    /*  margin: 9px 0;*/
+    /*  overflow: hidden;*/
+    /*  background-color: #e5e5e5;*/
+    /*  font-size: 1px;*/
+    /*  padding: 0;*/
+    /*}*/
+    
+    /* Drop down menu defalt title style*/
+    .dropdown>label:first-child {
+      top: 25%;
+      left: 2.5%;
+      font-size: 1em;
+      color: #D93644;
+      -webkit-transform-origin: 0 -150%;
+      transform-origin: 0 -150%;
+      transition: -webkit-transform 300ms ease;
+      transition: transform 300ms ease;
+      transition: transform 300ms ease, -webkit-transform 300ms ease;
+      pointer-events: none;
+    }
+    .dropdown:hover { 
+      background-position: right center; 
+    }
