--- a/carbon-market/styles/dropdown.css
+++ b/carbon-market/styles/dropdown.css
@@ -64,7 +64,7 @@
       width: 96%;
       padding: 2% 2%;
       display: none;
-      background-color: rgba(242, 242, 242, 0.6);
+      background-color: rgba(242, 242, 242, 0.9);
       
       /*box-shadow: 0 3px 6px rgba(0,0,0,.175);*/
     }
@@ -129,7 +129,7 @@
     display: inline-block;
     position: relative;
     width: 100%;
-    padding-bottom: 60%;  
+    /*padding-bottom: 60%;  */
     vertical-align: top;
     overflow: hidden;
 }
