--- a/carbon-market/styles/global.css
+++ b/carbon-market/styles/global.css
@@ -83,7 +83,7 @@ body{
         font-size: 1em;
         color: #D93644;
         font-weight: 600;
-        padding-bottom: 2%;
+        /*padding-bottom: 2%;*/
         padding-top: 5%;
     }
     
@@ -93,6 +93,15 @@ body{
         margin: none;
         font-weight: 300;
         line-height: 180%;
+    }
+    
+    a {
+        font-size: 1em;
+        padding: none;
+        margin: none;
+        font-weight: 300;
+        line-height: 180%;
+        color: #f2f2f2;
     }
 
         .highlight{
@@ -201,3 +210,8 @@ body{
 .bold_title{
     color: #f2f2f2;
 }
+
+.strong_red {
+            color: #D93644;
+            font-weight:600;
+        }
