--- a/carbon-market/styles/global.css
+++ b/carbon-market/styles/global.css
@@ -7,6 +7,7 @@ html {
     background-color:#0D0D0D; 
     color:#F2F2F2;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -68,7 +69,7 @@ body{
        font-size: 1.5em;
        color: #D93644;
        margin-top: 4%;
-       /*margin-bottom: 1%;*/
+       margin-bottom: 0%;
        font-weight: 600;
        text-align: left;
     }
@@ -77,6 +78,7 @@ body{
         font-size: 1em;
         /*padding-bottom: 2%;*/
         font-weight: 200;
+        margin-bottom: 5%;
     }
     
     h4 {
@@ -84,7 +86,7 @@ body{
         color: #D93644;
         font-weight: 600;
         /*padding-bottom: 2%;*/
-        padding-top: 5%;
+        /*padding-top: 5%;*/
     }
     
     h5 {
@@ -104,11 +106,11 @@ body{
     }
     
     a {
-        font-size: 1em;
+        font-size: 0.85em;
         padding: none;
         margin: none;
-        font-weight: 300;
-        line-height: 180%;
+        font-weight: 400;
+        line-height: 100%;
         color: #f2f2f2;
     }
 
@@ -164,19 +166,13 @@ body{
         /*padding: 5px; */
     }
     
-    /*.row{*/
-    /*    width: 100%;*/
-        
-    /*}*/
     
     .row::after {
     content: "";
     clear: both;
     display: table;
 }
-/*#strong {*/
-/* font-weight:600; */
-/*}*/
+
 
 .title{
      float: left;
@@ -196,7 +192,7 @@ body{
         /*padding: 5px;*/
 }
 
-.full-content{
+.full_content{
     float: left;
         width: 99%; /* two cols of images */
         /*padding: 5px;*/
@@ -228,22 +224,12 @@ body{
         }
         
         
-.end_container {
-  position: relative;
-  text-align: center;
+
+.indent{
+  margin-left:10%;
 }
 
-
-.text-block {
-  position: absolute;
-  bottom: 8%;
-  text-align: center;
-  /*right: 20px;*/
-  padding-left: 10%;
-  /*padding-right: 10%;*/
-}
-
-#rotate_img{
-    -ms-transform: rotate(90deg); /* IE 9 */
-    transform: rotate(180deg);
+.center_img{
+   float: left;
+    width: 65%;  
 }
