--- a/carbon-market/styles/nav.css
+++ b/carbon-market/styles/nav.css
@@ -14,13 +14,13 @@
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px;
+  padding: 1%;
   text-decoration: none;
 }
 
 /* Page content */
 .content {
-  padding: 16px;
+  padding: 1%;
 }
 
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
@@ -31,6 +31,8 @@
 }
 
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 60px;
-}
+/*.sticky + .content {*/
+/*  padding-top: 30%;*/
+/*}*/
+
+
