--- a/carbon-market/styles/multiline.css
+++ b/carbon-market/styles/multiline.css
@@ -25,7 +25,7 @@
 }
 
 .chart-wrapper text {
-  /* font-family: sans-serif; */
+   font-family: sans-serif; 
   font-family: 'Montserrat', sans-serif;
   font-size: 11px;
   color: #f2f2f2
@@ -77,7 +77,7 @@
 .chart-wrapper .legend .series-marker {
     height: 1em;
     width: 1em;
-    /*border-radius: 35%;*/
+    border-radius: 35%;
     background-color: #D93644;
     display: inline-block;
     margin-right: 4px;
@@ -98,11 +98,11 @@
 .chart-wrapper .focus rect {
     fill: #f2f2f2;
     opacity: 0.4;
-    /*border-radius: 2px;*/
+    border-radius: 2px;
 }
 .chart-wrapper .focus.line {
     stroke: #D93644;
-    /*stroke-dasharray: 2,5;*/
+    stroke-dasharray: 2,5;
     stroke-width: 2;
     opacity: 0.5;
 }
