--- a/assets/map/map_style.css
+++ b/assets/map/map_style.css
@@ -158,8 +158,11 @@
     color: white;
   }
 
-
-
+#map{
+  border: 0.1em solid;
+  margin-bottom: 1%;
+  border-color: rgba(242, 242, 242, 0.2);
+}
 
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');*/
  
